fixed issue with suggestion box being opened  after clicking on suggestion, not being able to click on images and the image not showing as selected

--- a/app/admin/city/CityPage.module.scss
+++ b/app/admin/city/CityPage.module.scss
@@ -56,4 +56,11 @@
 .imageGridContainer {
   height: calc(100% - 120px); // Adjust as needed to fit the available area
   overflow-y: auto; // Enable vertical scrolling if content is too long
+  pointer-events: auto;
+}
+
+.modalActions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
 }
