--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -17,8 +17,10 @@
   box-shadow: $box-shadow-lg;
   padding: 1.5rem;
   position: relative;
+  z-index: 1000;
   height: 80vh;
-  width: 80vw;
+  width: 90%;
+  max-width: 80vw;
 
   > button:first-child {
     position: absolute;
